refactor: Optimize file parsing and analysis with improved stream processing